@@ -25,6 +25,8 @@ Version 2.5.0
     with same locality, for instance NUMA nodes and Packages,
     or OS devices within a PCI device.
   + Add hwloc_distances_transform() to modify distances structures.
+  + Add hwloc_distances_add() is replaced with _add_create() followed
+    by _add_values() and _add_commit(). See hwloc/distances.h for details.
 * Backends
   + Add a levelzero backend for oneAPI L0 devices, exposed as OS devices
     of subtype "LevelZero" and name such as "ze0".
